--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
   <title>camcode_example</title>
   <link rel="manifest" href="manifest.json">
+  <script src="flutter.js" defer></script>
+
 </head>
 
 <body>
@@ -49,7 +51,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=2485787040');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=2689154888');
       });
     }
   </script>
