--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <link rel="manifest" href="manifest.json">
   <script>
     // The value below is injected by flutter build, do not touch.
-    const serviceWorkerVersion = "3334396064";
+    const serviceWorkerVersion = "2676839733";
   </script>
   <script src="flutter.js" defer></script>
 
@@ -55,9 +55,12 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3334396064');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=2676839733');
       });
-    }
+    } else {
+        // Service workers not supported. Just drop the <script> tag.
+        loadMainDartJs();
+      }
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
 </body>
