--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <script>
         // The value below is injected by flutter build, do not touch.
-        const serviceWorkerVersion = "3515842107";
+        const serviceWorkerVersion = "796089236";
     </script>
     <!-- This script adds the flutter initialization JS code -->
     <script src="flutter.js" defer></script>
@@ -61,5 +61,7 @@ _flutter.loader.loadEntrypoint({
         loadMainDartJs();
       }
 </script>
+<script src="main.dart.js" type="application/javascript"></script>
+
 </body>
 </html>
