--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
 
     <script>
         // The value below is injected by flutter build, do not touch.
-        const serviceWorkerVersion = "796089236";
+        const serviceWorkerVersion = "3767204021";
     </script>
     <!-- This script adds the flutter initialization JS code -->
-    <script src="flutter.js" defer></script>
+    <!--        <script src="flutter.js" defer></script>-->
     <script src="https://cdn.jsdelivr.net/npm/@ericblade/quagga2/dist/quagga.min.js"></script>
+
     <script src="js/barcode.js"></script>
 
 </head>
