--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ return appRunner.runApp();
 <script src="flutter.js" defer></script>
 <script>
   // This is where we update the serviceWorkerVersion
-  var serviceWorkerVersion = '"313467094"';
+  var serviceWorkerVersion = '"1426454439"';
 </script>
 <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -139,7 +139,7 @@ return appRunner.runApp();
 <script>
 
 
-<!--    const serviceWorkerVersion = "313467094";-->
+<!--    const serviceWorkerVersion = "1426454439";-->
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -165,12 +165,12 @@ return appRunner.runApp();
         navigator.serviceWorker.register(serviceWorkerUrl)
           .then((reg) => {
             function waitForActivation(serviceWorker) {
-              serviceWorker.addEventListener('statechange', () => {
+              <!--serviceWorker.addEventListener('statechange', () => {
                 if (serviceWorker.state == 'activated') {
                   console.log('Installed new service worker.');
                   loadMainDartJs();
                 }
-              });
+              });-->
             }
             if (!reg.active && (reg.installing || reg.waiting)) {
               // No active web worker and we have installed or are installing
