--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ return appRunner.runApp();
 <script src="flutter.js" defer></script>
 <script>
   // This is where we update the serviceWorkerVersion
-  var serviceWorkerVersion = '"2167611071"';
+  var serviceWorkerVersion = '"4112794839"';
 </script>
 <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.12.313/build/pdf.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -139,7 +139,7 @@ return appRunner.runApp();
 <script>
 
 
-<!--    const serviceWorkerVersion = "2167611071";-->
+<!--    const serviceWorkerVersion = "4112794839";-->
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -181,7 +181,7 @@ return appRunner.runApp();
               // need to ask the service worker to update.
               console.log('New service worker available.');
               reg.update();
-              waitForActivation(reg.installing);
+<!--              waitForActivation(reg.installing);-->
             } else {
               // Existing service worker is still good.
               console.log('Loading app from service worker.');
